<resources>
    <string name="android_ago_just_now">
        Just now
    </string>
    <string name="album_title_bookmarks">
        Bookmarks
    </string>
    <string name="album_title_history">
        History
    </string>
    <string name="album_title_home">
        Home
    </string>
    <string name="album_untitled">
        Untitled
    </string>
    <string name="clear_label">
        Clear
    </string>
    <string name="clear_menu_done_all">
        Done all
    </string>
    <string name="clear_title_quit">
        Clear when application exits
    </string>
    <string name="clear_title_bookmarks">
        Clear Bookmarks
    </string>
    <string name="clear_title_cache">
        Clear Cache
    </string>
    <string name="clear_title_cookie">
        Clear Cookies
    </string>
    <string name="clear_title_form_data">
        Clear Form data
    </string>
    <string name="clear_title_history">
        Clear History
    </string>
    <string name="clear_title_passwords">
        Clear Passwords
    </string>
    <string name="dialog_title_hint">
        Input Title
    </string>
    <string name="dialog_se_hint">
        https://www.google.com/search?q=
    </string>
    <string name="dialog_ua_hint">
        Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/41.0.2228.0 Safari/537.36
    </string>
    <string name="dialog_sign_in_username">
        Username
    </string>
    <string name="dialog_sign_in_password">
        Password
    </string>
    <string name="dialog_button_positive">
        OK
    </string>
    <string name="dialog_button_negative">
        Cancel
    </string>
    <string name="dialog_button_custom">
        Custom
    </string>
    <string name="dialog_title_download">
        Do you want to download the file?
    </string>
    <string name="dialog_title_resubmission">
        Resubmit
    </string>
    <string name="dialog_title_warning">
        Warning
    </string>
    <string name="dialog_title_sign_in">
        Sign in
    </string>
    <string name="dialog_content_resubmission">
        Would you like to resubmit your data?
    </string>
    <string name="dialog_content_ssl_error">
        The certificate of the site is not trusted. Proceed anyway?
    </string>
    <string name="dialog_content_donation">
        The income from donations will be used to:\n
        - Improve the development environment.\n
        - Improve the developer\'s enthusiasm.\n\n
        All donations will be considered:\n
        - Unpaid which mains the donor can not command or force the developer to do anything the donor want.\n
        - Owned by the developer.\n
        - The donor have agreed all above points.\n\n
        Alipay:\n
        matthewlee0725@gmail.com
    </string>
    <string name="dialog_content_upload">
        Currently, File upload is only supported on Android 5.0 and Above.
    </string>
    <string name="list_empty">
        Current list is empty
    </string>
    <string name="main_menu_new_tab">
        New tab
    </string>
    <string name="main_menu_copy_link">
        Copy link
    </string>
    <string name="main_menu_save">
        Save
    </string>
    <string name="main_omnibox_input_hint">
        Search or type URL
    </string>
    <string name="main_relayout_ok">
        OK
    </string>
    <string name="main_about_blank">
        about:blank
    </string>
    <string name="notification_content_holder">
        Click to View Pages
    </string>
    <string name="readability_label">
        Readability
    </string>
    <string name="readability_menu_background">
        Background
    </string>
    <string name="readability_menu_share">
        Share
    </string>
    <string name="readability_empty">
        Failed to load Readability, Please check your network connection.
    </string>
    <string name="search_hint">
        Search
    </string>
    <string name="setting_label">
        Settings
    </string>
    <string name="setting_title_browser">
        Browser Settings
    </string>
    <string name="setting_title_search_engine">
        Search Engine
    </string>
    <string name="setting_summary_search_engine_google">
        Google
    </string>
    <string name="setting_summary_search_engine_duckduckgo">
        DuckDuckGo
    </string>
    <string name="setting_summary_search_engine_startpage">
        StartPage
    </string>
    <string name="setting_summary_search_engine_bing">
        Bing
    </string>
    <string name="setting_summary_search_engine_baidu">
        Baidu
    </string>
    <string name="setting_summary_search_engine_custom">
        Custom
    </string>
    <string name="setting_title_notification_priority">
        Notification Priority
    </string>
    <string name="setting_summary_notification_priority_default">
        Default
    </string>
    <string name="setting_summary_notification_priority_high">
        High
    </string>
    <string name="setting_summary_notification_priority_low">
        Low
    </string>
    <string name="setting_title_omnibox_position">
        Omnibox Position
    </string>
    <string name="setting_summary_omnibox_position_top">
        Top
    </string>
    <string name="setting_summary_omnibox_position_bottom">
        Bottom
    </string>
    <string name="setting_title_omnibox_control">
        Omnibox Control
    </string>
    <string name="setting_summary_omnibox_control">
        Swipe omnibox left/right to switch tabs
    </string>
    <string name="setting_title_volume_control">
        Volume Control
    </string>
    <string name="setting_summary_vc_switch_tabs">
        Switch Tabs
    </string>
    <string name="setting_summary_vc_scroll_webpage">
        Scroll Webpage
    </string>
    <string name="setting_summary_vc_system_default">
        System Default
    </string>
    <string name="setting_title_images">
        Images
    </string>
    <string name="setting_summary_images">
        Enable Network images
    </string>
    <string name="setting_title_cookie">
        Cookies
    </string>
    <string name="setting_summary_cookie">
        Enable Cookies
    </string>
    <string name="setting_title_javascript">
        JavaScript
    </string>
    <string name="setting_summary_javascript">
        Enable JavaScript
    </string>
    <string name="setting_title_location">
        Location
    </string>
    <string name="setting_summary_location">
        Allow websites to access your location
    </string>
    <string name="setting_title_multiple_windows">
        Multiple Windows
    </string>
    <string name="setting_summary_multiple_windows">
        Enable Multiple windows
    </string>
    <string name="setting_title_scroll_bar">
        Scroll Bar
    </string>
    <string name="setting_summary_scroll_bar">
        Show/Hide scroll bar on webpages
    </string>
    <string name="setting_title_text_reflow">
        Text Reflow
    </string>
    <string name="setting_summary_text_reflow">
        Enable text reflow
    </string>
    <string name="setting_title_user_agent">
        User Environment
    </string>
    <string name="setting_summary_user_agent_default">
        Default
    </string>
    <string name="setting_summary_user_agent_desktop">
        Desktop
    </string>
    <string name="setting_summary_user_agent_custom">
        Custom
    </string>
    <string name="setting_title_rendering">
        Rendering
    </string>
    <string name="setting_summary_rendering_default">
        Default
    </string>
    <string name="setting_summary_rendering_grayscale">
        Grayscale
    </string>
    <string name="setting_summary_rendering_inverted">
        Inverted
    </string>
    <string name="setting_summary_rendering_inverted_grayscale">
        Inverted Grayscale
    </string>
    <string name="setting_title_adblock">
        AdBlock
    </string>
    <string name="setting_summary_adblock">
        Enable AdBlock
    </string>
    <string name="setting_title_whitelist">
        Whitelist
    </string>
    <string name="setting_summary_whitelist">
        Allow these sites show ads
    </string>
    <string name="setting_title_export_whilelist">
        Export whitelist
    </string>
    <string name="setting_title_import_whilelist">
        Import whilelist
    </string>
    <string name="whilelist_filename">
        NinjaWhitelist
    </string>
    <string name="setting_title_readability">
        Readability
    </string>
    <string name="setting_title_token">
        Token
    </string>
    <string name="setting_summary_readability">
        Enable Readability
    </string>
    <string name="setting_summary_token">
        Set Readability Token
    </string>
    <string name="setting_title_data">
        Data
    </string>
    <string name="setting_title_passwords">
        Passwords
    </string>
    <string name="setting_summary_passwords">
        Save Passwords
    </string>
    <string name="setting_title_export_bookmarks">
        Export Bookmarks
    </string>
    <string name="setting_title_import_bookmarks">
        Import Bookmarks
    </string>
    <string name="bookmarks_filename">
        NinjaBookmarks
    </string>
    <string name="setting_title_clear_control">
        Clear Control
    </string>
    <string name="setting_title_others">
        Others
    </string>
    <string name="setting_title_version">
        Version
    </string>
    <string name="setting_title_license">
        License
    </string>
    <string name="setting_title_donation">
        Donate
    </string>
    <string name="toast_add_bookmark_successful">
        Bookmark Successfully Added
    </string>
    <string name="toast_add_bookmark_failed">
        Can\'t add this page to bookmark
    </string>
    <string name="toast_add_to_home_successful">
        Successfully added to Home
    </string>
    <string name="toast_add_to_home_failed">
        Failed to add to Home
    </string>
    <string name="toast_add_token_successful">
        Successfully added Readability API
    </string>
    <string name="toast_add_whitelist_successful">
        Successfully added Domain
    </string>
    <string name="toast_already_at_the_front">
        Already at the front
    </string>
    <string name="toast_already_exist_in_home">
        Already exist in home
    </string>
    <string name="toast_clear_successful">
        Successfully Cleared
    </string>
    <string name="toast_clear_failed">
        Failed to Clear
    </string>
    <string name="toast_copy_successful">
        Successfully Copied
    </string>
    <string name="toast_delete_bookmark_successful">
        Successfully Deleted Bookmark
    </string>
    <string name="toast_delete_successful">
        Successfully Deleted
    </string>
    <string name="toast_domain_already_exists">
        Domain already exists
    </string>
    <string name="toast_double_taps_quit">
        Press again to exit
    </string>
    <string name="toast_emoji">
        (๑•̀ㅂ•́)و✧
    </string>
    <string name="toast_export_bookmarks_successful">
        Exported bookmarks file at:&#160;
    </string>
    <string name="toast_export_bookmarks_failed">
        Failed to export Bookmarks
    </string>
    <string name="toast_export_whitelist_successful">
        Exported whitelist file at:&#160;
    </string>
    <string name="toast_export_whitelist_failed">
        Failed to export Whitelist
    </string>
    <string name="toast_import_bookmarks_successful">
        Imported bookmarks count:&#160;
    </string>
    <string name="token_edit_hint">
        Readability token
    </string>
    <string name="token_add">
        Add
    </string>
    <string name="token_desc">
        Go to https://www.readability.com/developers/api to get your own Readability token
    </string>
    <string name="whitelist_edit_hint">
        Domain
    </string>
    <string name="whitelist_add">
        Add
    </string>
</resources>