<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white">

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <EditText android:id="@+id/token_edit"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/layout_margin_8dp"
                  android:layout_marginLeft="@dimen/layout_margin_8dp"
                  android:layout_marginRight="@dimen/layout_margin_8dp"
                  android:hint="@string/token_edit_hint"
                  android:textColor="@color/text"
                  android:textColorHint="@color/hint"
                  android:textCursorDrawable="@null"
                  android:textSize="@dimen/text_size_14sp"
                  android:imeOptions="actionDone"
                  android:inputType="textMultiLine">
        </EditText>

        <Button android:id="@+id/token_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_8dp"
                android:layout_marginRight="@dimen/layout_margin_8dp"
                android:layout_marginBottom="@dimen/layout_margin_8dp"
                android:text="@string/token_add"
                android:textColor="@color/text"
                android:textAllCaps="true">
        </Button>

    </LinearLayout>

    <View android:layout_width="match_parent"
          android:layout_height="@dimen/layout_height_1dp"
          android:background="@color/dividers">
    </View>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/layout_margin_20dp"
              android:layout_gravity="center|top"
              android:gravity="center"
              android:text="@string/token_desc"
              android:textAllCaps="false"
              android:textColor="@color/hint"
              android:textSize="@dimen/text_size_14sp">
    </TextView>

</LinearLayout>